--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -434,7 +434,7 @@
       <hr />
       <div class="form-group">
         <a
-          class="btn btn-outline-danger btn-block"
+          class="btn btn-info btn-block"
           href="{{ url_for('travel_warrants.add_expenses', warrant_id=warrant.travel_warrant_id) }}"
           >Dodajte trošak</a
         >
