--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -22,9 +22,9 @@
 
 
     {% if title %}
-      <title>Putni naloziiiii - {{ title }}</title>
+      <title>Putni nalozi - {{ title }}</title>
     {% else %}
-      <title>Putni naloziiiiiii</title>
+      <title>Putni nalozi</title>
     {% endif %}
   </head>
   <body>
