--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -453,7 +453,7 @@
           <tr>
             <td class="align-middle">
               <a
-                class="mr-2 btn btn-info"
+                class="mr-2 btn btn-info width100"
                 href="{{ url_for('travel_warrants.expenses_profile', warrant_id=warrant.travel_warrant_id, expenses_id=trosak.expenses_id) }}"
                 title="Uređivanje Troška"
                 >{{ trosak.expenses_type }}</a
