--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -31,7 +31,7 @@
         {{ form.abroad.label(class="form-check-label") }}
         <!-- test: {{form.abroad.data}} -->
       </div>
-      <div class="col form-box">
+      <div class="form-box">
         {{ form.relation.label(class="form-control-label") }} 
         {% if form.relation.errors %} 
         {{ form.relation(class="form-control form-control-lg is-invalid") }}
@@ -114,7 +114,7 @@
                 {{ form.start_datetime(class="form-control form-control-lg", type="datetime-local") }}
             {% endif %}
         </div>
-        <div class="row">
+        <div class="row padright0">
           <div class="col form-box">
             {{ form.status.label(class="form-control-label") }}
               {% if form.status.errors %}
@@ -128,7 +128,7 @@
                   {{ form.status(class="form-select form-select-lg") }}
               {% endif %}
           </div>
-          <div class="col form-box">
+          <div class="col form-box padright0">
             {{ form.end_datetime.label(class="form-control-label") }}
               {% if form.end_datetime.errors %}
                   {{ form.end_datetime(class="form-control form-control-lg is-invalid", min=warrant.start_datetime) }}
@@ -142,7 +142,7 @@
               {% endif %}
           </div>
         </div>
-        <div id="accordion">
+        <div id="accordion" class="top15">
           <div class="accordion-item">
             <div class="accordion-header" id="headingOne">
               <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -264,7 +264,7 @@
             <tbody>
               {% for trosak in troskovi %}
               <tr>
-                <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.expenses_profile', warrant_id=warrant.travel_warrant_id, expenses_id=trosak.expenses_id) }}" title="Uređivanje Troška">{{ trosak.expenses_type }}</a></td>
+                <td class="align-middle"> <a class="mr-2 btn btn-info width100" href="{{ url_for('travel_warrants.expenses_profile', warrant_id=warrant.travel_warrant_id, expenses_id=trosak.expenses_id) }}" title="Uređivanje Troška">{{ trosak.expenses_type }}</a></td>
                 <td class="align-middle"> {{ trosak.description }} </td>
                 <td class="align-middle"> {{ '{:,.2f}'.format(trosak.amount) }} {{ trosak.amount_currency }} </td>
               </tr>
@@ -275,7 +275,7 @@
       </div>
     </div>
   </fieldset>
-  <div class="form-group">
+  <div class="form-group centerall">
     <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_list')}}">Nazad</a>
     {% if warrant.status == 'kreiran' %}
       <input class="btn btn-primary" type="submit" name="dugme" value="Završi">
