--- a/putninalozi/static/mikicustom.css
+++ b/putninalozi/static/mikicustom.css
@@ -77,6 +77,7 @@ body:not(.login) h1 { display: block; font-size: 24px; font-weight: 700; color: 
 .m-1 { margin: 0 20px 0 0 !important; }
 #accordionZero { flex: 2; }
 #accordionZero:not(.nothere) { margin-bottom: 50px; }
+body.tw-user #accordionZero:not(.nothere) { margin-bottom: 0; }
 .accordion-item { border-radius: 5px !important; border: 0; background: #f5f5f5; margin-bottom: 15px; }
 .accordion-button { background-image: linear-gradient(#009dde, #104e97); color: #333 !important; text-transform: uppercase; font-weight: 700; font-size: 12px; 
 	padding: 10px 20px; border-radius: 5px !important; color: #fff !important; }
@@ -102,6 +103,7 @@ select.form-select.form-select-sm { min-height: 38px; }
 .top15, .inertop15 .form-box:not(:first-child) { padding-top: 15px; }
 .top50 { padding-top: 50px; }
 .padright0 { padding-right: 0; }
+.paddingall { padding: 0 !important; }
 .centerall { text-align: center; }
 .width100 { width: 100%; }
 table#data { border: 0; width: 100% !important; margin-top: 20px; }
@@ -146,6 +148,13 @@ form > div.form-group { text-align: center; }
 .btn.btn-danger:hover { background-image: linear-gradient(#7c004e, #bd0077) !important; }
 .btn.btn-secondary, .btn.btn-danger { margin: 0 0 10px 0 !important; }
 .form-check-input:checked { background-color: #009cdd; border-color: #009cdd; }
+.centerbutton { display: block !important; text-align: center; }
+.centerbutton:after { position: absolute; margin-left: 10px; }
+.columnflex { flex-direction: column; align-items: center !important; }
+.rowflex { display: flex; width: 100%; align-items: center; }
+.tableiconimg { float: left; margin-right: 10px; width: 32px; height: 32px; }
+.iconwrapper p { display: inline-block; margin-bottom: 0; }
+.flexvcenter { display: flex; align-items: center; }
 @media (min-width: 992px) {
 	/*body:not(.Korisnici) .btn-info { width: 100%}*/
 	body.Fakture table#data .btn.btn-info { width: 100%; }
