--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -37,7 +37,7 @@
             data-parent="#accordionZero"
           >
             <div class="card-body">
-              {{ warrant.text_form | safe }}
+              {{ detalji | safe }}
             </div>
           </div>
         </div>
