--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -20,7 +20,7 @@
             </div>
             <div id="collapseZero" class="collapse" aria-labelledby="headingZero" data-parent="#accordionZero">
               <div class="card-body">
-                {{ warrant.text_form | safe }}
+                {{ detalji | safe }}
               </div>
             </div>
           </div>
