--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -103,7 +103,7 @@
         <td class="align-middle">
           {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }}
         </td>
-        <td class="align-middle">
+        <td class="align-middle flexvcenter">
           {% if warrant.together_with %} 
             {% for w in warrants %}
               {% if w.travel_warrant_number == warrant.together_with %}
